Fix POST dict iteration keyerror and add visible client validation for custom file inputs

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -1247,12 +1247,13 @@ ul {
 
 .file-input-hidden {
     position: absolute;
-    width: 100%;
-    height: 100%;
+    width: 0.1px;
+    height: 0.1px;
     top: 0;
     left: 0;
     opacity: 0;
     cursor: pointer;
+    z-index: -1;
 }
 
 .file-preview-area {
